add favicon and add navbar  elements

--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A quick guide to Donegal's hidden gems">
+    <meta name="keywords" content="staycation, Donegal, north west, wild, atlantic way">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <title>Discover the North West</title>
 </head>
 <body>
   <header>
-    <h1>Gems of Donegal</h1>
-  </header>  
+    <a href="index.html">
+        <h1>Gems of Donegal</h1>
+    </a>
+    
+    <nav>
+        <li>
+            <ul><a href="index.html">Home</a></ul>
+            <ul><a href="guide.html">Guide</a></ul>
+            <ul><a href="newsletter.html">Newsletter</a></ul>
+        </li>
+    </nav>
+  </header>
+  <main>content</main> 
+  <footer>
+    
+  </footer> 
 </body>
 </html>
