linked CSS file to html

--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Meta description and keywords-->
     <meta name="description" content="A quick guide to Donegal's hidden gems">
     <meta name="keywords" content="staycation, Donegal, north west, wild, atlantic way">
+    <!--Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <!--TItle-->
     <title>Discover the North West</title>
+    <!--CSS Stylesheet-->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <header>
@@ -26,8 +31,6 @@
     </nav>
   </header>
   <main>content</main> 
-  <footer>
-    
-  </footer> 
+  <footer>content</footer> 
 </body>
 </html>
