add font family using imput

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <h1>Gems of Donegal</h1>
     </a>
     
-    <nav>
-        <li>
-            <ul><a href="index.html">Home</a></ul>
-            <ul><a href="guide.html">Guide</a></ul>
-            <ul><a href="newsletter.html">Newsletter</a></ul>
-        </li>
+    <nav id="nav-links">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="guide.html">Guide</a></li>
+          <li><a href="newsletter.html">Newsletter</a></li>
+       </ul>
     </nav>
   </header>
   <main>content</main> 
