add body element font family

--- a/index.html
+++ b/index.html
@@ -21,18 +21,15 @@
     <a href="index.html">
         <h1 id="title">Hills of Donegal</h1>
     </a>
-    <input type="checkbox" id="nav-toggle" name="nav-toggle">
-    <label for="nav-toggle" class="nav-toggle-label">
-      <i class="fa-solid fa-bars"></i>
-    </label>
-
-    <nav>
-        <ul id="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="guide.html">Guide</a></li>
-          <li><a href="newsletter.html">Newsletter</a></li>
-       </ul>
-    </nav>
+      <div class="nav-links">
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="guide.html">Guide</a></li>
+            <li><a href="newsletter.html">Newsletter</a></li>
+          </ul>
+        </nav>
+      </div>
   </header>
   <main>content</main> 
   <footer>content</footer> 
