finish menu nav bar on header and add nav bar on higher resolutions

--- a/index.html
+++ b/index.html
@@ -21,15 +21,13 @@
     <a href="index.html">
         <h1 id="title">Hills of Donegal</h1>
     </a>
-      <div class="nav-links">
         <nav>
-          <ul>
+          <ul id="navvi">
             <li><a href="index.html">Home</a></li>
             <li><a href="guide.html">Guide</a></li>
             <li><a href="newsletter.html">Newsletter</a></li>
           </ul>
         </nav>
-      </div>
   </header>
   <main>content</main> 
   <footer>content</footer> 
