add cover text and image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Meta description and keywords-->
     <meta name="description" content="A quick guide to Donegal's hidden gems">
-    <meta name="keywords" content="staycation, Donegal, north west, wild, atlantic way, travel guide">
+    <meta name="keywords" content="staycation, Donegal, north west, wild, atlantic way, travel guide, tyrconnell, hills">
     <!--Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -19,7 +19,7 @@
 <body>
   <header>
     <a href="index.html">
-        <h1 id="title">Hills of Donegal</h1>
+        <h1 id="title">Hills of Tyrconnell</h1>
     </a>
         <nav>
           <ul id="navvi">
@@ -29,7 +29,14 @@
           </ul>
         </nav>
   </header>
-  <main>content</main> 
+  <main>
+    <section id="cover-img">
+      <div id="cover-text">
+        <h2>Donegal</h2>
+        <h3>Guides to the scenic north-west</h3>
+      </div>
+    </section>
+  </main> 
   <footer>content</footer> 
 </body>
 </html>
