add color banner to nav and add landing image w/ text

--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
 <body>
   <header>
     <a href="index.html">
-        <h1 id="title">Hills of Tyrconnell</h1>
+        <h1 class="pad" id="title">Hills of Tyrconnell</h1>
     </a>
-        <nav>
-          <ul id="navvi">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="guide.html">Guide</a></li>
-            <li><a href="newsletter.html">Newsletter</a></li>
-          </ul>
-        </nav>
+    <nav>
+      <div class="pad" id="banner">
+        <ul id="navvi">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="guide.html">Guide</a></li>
+          <li><a href="newsletter.html">Newsletter</a></li>
+        </ul>
+      </div>
+    </nav>
   </header>
   <main>
     <section id="cover-img">
