add section image and text

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>Discover the North West</title>
     <!--CSS Stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/6cf65db6d3.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -36,6 +37,21 @@
       <div id="cover-text">
         <h2>Donegal</h2>
         <h3>Guides to the scenic north-west</h3>
+      </div>
+    </section>
+    <div class="section-title">
+      <h2>Explore Long Forgotten Lands</h2>
+    </div>
+    <section id="locale-img">
+      <div id="textbox">
+        <div id="text-img">
+          <p>Explore some of the most vibrant and picturesque sights and scenes 
+            from Ireland's hidden gem in the west! 
+          </p>
+        </div>
+        <div id="pin-drop">
+          <h3><i class="fa-solid fa-location-dot"></i>Tory Island</h3>
+        </div>
       </div>
     </section>
   </main> 
