add footer social icons

--- a/index.html
+++ b/index.html
@@ -55,6 +55,30 @@
       </div>
     </section>
   </main> 
-  <footer>content</footer> 
+  <!--Footer and Socials - Love Running-->
+  <footer>
+    <ul id="socials">
+      <li>
+        <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+              aria-label="Visit our Facebook page (opens in a new tab)">
+              <i class="fa-brands fa-facebook"></i></a>
+      </li>
+      <li>
+        <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+              aria-label="Visit our Twitter page (opens in a new tab)">
+              <i class="fa-brands fa-x-twitter"></i></a>
+      </li>
+      <li>
+        <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+              aria-label="Visit our YouTube page (opens in a new tab)">
+              <i class="fa-brands fa-youtube"></i></a>
+      </li>
+      <li>
+        <a href="https://www.discord.com/" target="_blank" rel="noopener"
+              aria-label="Visit our Discord server (opens in a new tab)">
+              <i class="fa-brands fa-discord"></i></a>
+      </li>
+    </ul>
+  </footer> 
 </body>
 </html>
