add guide section

--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Meta description and keywords-->
-    <meta name="description" content="A quick guide to Donegal's hidden gems">
-    <meta name="keywords" content="staycation, Donegal, north west, wild, atlantic way, travel guide, tyrconnell, hills">
-    <!--Favicon-->
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <!--TItle-->
-    <title>Discover the North West</title>
-    <!--CSS Stylesheet-->
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://kit.fontawesome.com/6cf65db6d3.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--Meta description and keywords-->
+  <meta name="description" content="A quick guide to Donegal's hidden gems">
+  <meta name="keywords" content="staycation, Donegal, north west, wild, atlantic way, travel guide, tyrconnell, hills">
+  <!--Favicon-->
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <!--TItle-->
+  <title>Discover the North West</title>
+  <!--CSS Stylesheet-->
+  <link rel="stylesheet" href="assets/css/style.css">
+  <script src="https://kit.fontawesome.com/6cf65db6d3.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
   <header>
     <a href="index.html">
-        <h1 class="pad" id="title">Hills of Tyrconnell</h1>
+      <h1 class="pad" id="title">Hills of Tyrconnell</h1>
     </a>
     <nav>
       <div class="pad" id="banner">
@@ -45,40 +47,62 @@
     <section id="locale-img">
       <div id="textbox">
         <div id="text-img">
-          <p>Explore some of the most vibrant and picturesque sights and scenes 
-            from Ireland's hidden gem in the west! 
+          <p>Explore some of the most vibrant and picturesque sights and scenes
+            from Ireland's hidden gem
           </p>
         </div>
         <div id="pin-drop">
-          <h3><i class="fa-solid fa-location-dot"></i>Tory Island</h3>
+          <h3><i class="fa-solid fa-location-dot"></i><a href="https://en.wikipedia.org/wiki/Tory_Island">
+            Tory Island</a></h3>
         </div>
       </div>
     </section>
-  </main> 
+    <!--Guide Section-->
+    <div class="section-title">
+      <h2>What to See</h2>
+    </div>
+    <section>
+      <div id="guide">
+        <div class="cliff">
+          <h3 class="guide-name"><a href="https://www.slieveleague.com/">Slieve League</a></h3>
+        </div>
+        <div class="light">
+          <h3 class="guide-name"><a href="https://fanadlighthouse.com/">Fanad Lighthouse</a></h3>
+        </div>
+        <div class="valley">
+          <h3 class="guide-name"><a href="https://www.theirishroadtrip.com/glengesh-pass/">Glengesh Pass</a></h3>
+        </div>
+        <div class="park">
+          <h3 class="guide-name"><a href="https://www.nationalparks.ie/glenveagh/">Glenveagh National Park</a></h3>
+        </div>
+      </div>
+    </section>
+  </main>
   <!--Footer and Socials - Love Running-->
   <footer>
     <ul id="socials">
       <li>
         <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-              aria-label="Visit our Facebook page (opens in a new tab)">
-              <i class="fa-brands fa-facebook"></i></a>
+          aria-label="Visit our Facebook page (opens in a new tab)">
+          <i class="fa-brands fa-facebook"></i></a>
       </li>
       <li>
         <a href="https://www.twitter.com/" target="_blank" rel="noopener"
-              aria-label="Visit our Twitter page (opens in a new tab)">
-              <i class="fa-brands fa-x-twitter"></i></a>
+          aria-label="Visit our Twitter page (opens in a new tab)">
+          <i class="fa-brands fa-x-twitter"></i></a>
       </li>
       <li>
         <a href="https://www.youtube.com/" target="_blank" rel="noopener"
-              aria-label="Visit our YouTube page (opens in a new tab)">
-              <i class="fa-brands fa-youtube"></i></a>
+          aria-label="Visit our YouTube page (opens in a new tab)">
+          <i class="fa-brands fa-youtube"></i></a>
       </li>
       <li>
         <a href="https://www.discord.com/" target="_blank" rel="noopener"
-              aria-label="Visit our Discord server (opens in a new tab)">
-              <i class="fa-brands fa-discord"></i></a>
+          aria-label="Visit our Discord server (opens in a new tab)">
+          <i class="fa-brands fa-discord"></i></a>
       </li>
     </ul>
-  </footer> 
+  </footer>
 </body>
+
 </html>
