--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <div class="pad" id="banner">
         <ul id="navvi">
           <li><a href="index.html">Home</a></li>
-          <li><a href="guide.html">Guide</a></li>
-          <li><a href="newsletter.html">Newsletter</a></li>
+          <li><a href="#to-see">Guide</a></li>
+          <li><a href="#news">Newsletter</a></li>
         </ul>
       </div>
     </nav>
@@ -59,7 +59,7 @@
     </section>
     <!--Guide Section-->
     <div class="section-title">
-      <h2>What to See</h2>
+      <h2 id="to-see">What to See</h2>
     </div>
     <section>
       <div id="guide">
